[package]
name = "r5rs"
version = "0.2.0"
authors = ["Jose Roberto Vidal <vidal.roberto.j@gmail.com>"]

[dependencies]
gc = "0.3.2"
log = "0.4.1"
env_logger = "0.5.10"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
rustyline = "1.0.0"

[target.'cfg(target_os = "emscripten")'.dependencies]
stdweb = "0.1.3"
