[package]
name = "r5rs"
version = "0.2.0"
authors = ["Jose Roberto Vidal <vidal.roberto.j@gmail.com>"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
gc = "0.3.2"
log = "0.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.5.10"
rustyline = "1.0.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "=0.2.25"