[package]
name = "r5rs"
version = "0.2.0"
authors = ["Jose Roberto Vidal <vidal.roberto.j@gmail.com>"]

[dependencies]
gc = "0.3.2"
log = "0.4.1"

[profile.release]
debug = false
lto = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.5.10"
rustyline = "1.0.0"

[workspace]
members = [".", "web"]